--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-massively
+remote_theme: causeimcloudy.github.io/massively
 title: CauseImCloudy
-description: Welcome.
+description: Welcome
